--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="odin-recipes-web/odin-recipes/recipes/chicken-sandwich.html">Chicken-Sandwich</a>
 </body>
 </html>
