--- a/recipes/chicken-sandwich.html
+++ b/recipes/chicken-sandwich.html
@@ -7,5 +7,35 @@
 </head>
 <body>
     <h1>Chicken-Sandwich</h1>
+    <img src="https://www.allrecipes.com/thmb/8xyMKEgpBDrGjYFxzQ8FOPaNkiY=/750x0/filters:
+    no_upscale():max_bytes(150000):strip_icc():
+    format(webp)/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj
+    -1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt="tasty burger picture"><br><br>
+
+    <h3>What's special about this buff chicken sandwich?</h3>
+
+    <p>This crockpot Buffalo chicken is great for hearty sandwiches that will please those 
+        who love Buffalo chicken wings. This recipe is perfect for those days spent watching football or Formula1.
+         I like to top these with blue cheese or ranch dressing. </p><br>
+
+    <p>These are famous for it's mouthfilling steak and the vibrant salad flavours with a banger combination of native peri-peri 
+        french fries.</p>
+
+    <h4>INGREDIENTS</h4>
+    <ul>
+        <li>4 skinless, boneless chicken breast halves</li>
+        <li>1 (17.5 fluid ounce) bottle Buffalo wing sauce, divided</li>
+        <li>½ (1 ounce) package dry ranch salad dressing mix</li>
+        <li>2 tablespoons butter</li>
+        <li>6 hoagie rolls, split lengthwise</li>
+    </ul>
+    
+    <h4>Steps To Follow</h4>
+    <ol>
+        <li>Place chicken breasts into the slow cooker; pour in 3/4 of the wing sauce and ranch dressing mix.</li>
+        <li>Cover and cook on Low for 6 to 7 hours.</li>
+        <li>Shred chicken in the cooker with two forks. Stir in butter.</li>
+        <li>Pile shredded chicken and sauce onto hoagie rolls. Serve with remaining Buffalo sauce.</li>
+    </ol>
 </body>
 </html>
