Fixed file loading issue and rendered image succesfully

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="odin-recipes-web/odin-recipes/recipes/chicken-sandwich.html">Chicken-Sandwich</a>
-    
+    <a href="recipes/chicken-sandwich.html" target="_blank">Chicken-Sandwich</a>
+
 </body>
 </html>
