--- a/recipes/chicken-sandwich.html
+++ b/recipes/chicken-sandwich.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <h1>Chicken-Sandwich</h1>
-    <img src="https://www.allrecipes.com/thmb/8xyMKEgpBDrGjYFxzQ8FOPaNkiY=/750x0/filters:
-    no_upscale():max_bytes(150000):strip_icc():
-    format(webp)/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj
-    -1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt="tasty burger picture"><br><br>
+    <img src="https://www.allrecipes.com/thmb/8xyMKEgpBDrGjYFxzQ8FOPaNkiY=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1113368-slow-cooker-buffalo-chicken-sandwiches-ReneePaj-1x1-1-f1ab4c11111343f7b88ddbfd9df88771.jpg" alt="tasty burger picture"><br><br>
 
     <h3>What's special about this buff chicken sandwich?</h3>
 
