--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken-sandwich.html" target="_blank">Chicken-Sandwich</a>
-
+    <ul>
+    <li><a href="recipes/chicken-sandwich.html" target="_blank">Chicken-Sandwich</a></li>
+    <li><a href="recipes/deep-fried-oreos.html">Deep-Fried-Oreos</a></li>
+    </ul>
 </body>
 </html>
