--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="recipes/chicken-sandwich.html" target="_blank">Chicken-Sandwich</a></li>
-    <li><a href="recipes/deep-fried-oreos.html">Deep-Fried-Oreos</a></li>
+    <li><a href="recipes/deep-fried-oreos.html" target="_blank">Deep-Fried-Oreos</a></li>
     </ul>
 </body>
 </html>
