--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
     <li><a href="recipes/chicken-sandwich.html" target="_blank">Chicken-Sandwich</a></li>
     <li><a href="recipes/deep-fried-oreos.html" target="_blank">Deep-Fried-Oreos</a></li>
+    <li><a href="recipes/laTaco.html" target="_blank">Chicken-Tacos</a></li>
     </ul>
 </body>
 </html>
